# weatherwan-fastapi-backend

./: README.md  db.sqlite  pyproject.toml  requirements.txt
app/: __init__.py  database.py  environment.py  main.py  model.py  models.py  schemas.py
output/: model.h  model.tflite
