[project]
name = "weatherwan-fed-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "sqlmodel>=0.0.24",
    "tensorflow>=2.19.0",
    "websockets>=15.0.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

